# EaZyGrad

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
.hypothesis/constants/: 7f77f2f38dcafefc  c42611f8acee9ef4
benchmarks/: linear.py  logsumexp.py  profile_mlp_mnist.py
docs/: dag@root7  requirements.txt
docs/source/: auto_diff.md  conf.py  eazygrad.data.rst  eazygrad.functions.rst  eazygrad.grad.rst  eazygrad.nn.rst  eazygrad.rst  eazygrad.tensor_object.rst  eazygrad.utils.rst  index.rst  learn.rst  modules.rst
eazygrad/: __init__.py  _tensor.py  optimizer.py  tensor_factories.py
eazygrad/data/: __init__.py  dataloader.py  datasets.py  utils.py
eazygrad/functions/: __init__.py  activations.py  loss.py  math.py  specials.py
eazygrad/grad/: __init__.py  computation_graph.py  grad_function.py  operations.py
eazygrad/nn/: __init__.py  batchnorm2d.py  convolutions.py  linear.py  module.py  test.py
eazygrad/utils/: check.py
examples/: mnist_mlp.py  ppo_mlp.py
examples/Reinforcement Learning/: models.py  ppo_mlp.py
examples/reinforcement_learning/: config.py  main.py  models.py  (+4 more)
test/: conftest.py  test_arithmetic_backward.py  test_arithmetic_forward.py  test_dag.py  test_function_backward.py  test_function_forward.py  test_grad_engine.py  test_index_ops_backward.py  test_index_ops_forward.py  test_init.py  test_linear.py  test_math_ops_tensor.py  test_mnist_mlp.py  test_numpy.py  test_optimizer.py  test_plot_dag.py  test_shape_ops_backward.py  test_shape_ops_forward.py  test_shape_ops_tensor.py  test_utils.py
(+743 files in other folders)
