[build-system]
requires = ["setuptools >= 58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eazygrad"
version="0.0.1"
authors = [
    {name = "Samuel Beaussant", email = "sambeaussant@gmail.com"},
]
description = "Simple Deep Learning library for educational purposes"
requires-python = ">=3.7, <3.12"
dependencies = [
    "numpy>=1.24.1",
]

[project.optional-dependencies]
dev = ["torch", "pytest", "hypothesis"]