[build-system]
requires = ["setuptools >= 58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eazygrad"
version="0.0.1"
authors = [
    {name = "Samuel Beaussant", email = "sambeaussant@gmail.com"},
]
description = "Simple Deep Learning library for educational purposes"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy>=2.3.0",
    "numba>=0.63.1",
    "graphviz"
]

[project.optional-dependencies]
data = ["pillow", "tqdm"]
dev = ["torch", "pytest", "pytest-mock", "hypothesis"]